# todolist

./: pyproject.toml
todolist_project/: app.py  database.py  db.sqlite  models.py
todolist_project/templates/: base.html
