[tool.poetry]
name = "todolist-project"
version = "0.1.0"
description = ""
authors = ["xingwei2333 <xingwei2333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
